--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,36 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     implementation 'com.android.support:design:28.0.0-rc02'
     implementation 'com.google.firebase:firebase-database:16.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-core:16.0.3'
 
     // Firebase AuthUI
-    implementation 'com.firebaseui:firebase-ui-auth:3.1.2'
+    implementation 'com.firebaseui:firebase-ui-auth:3.2.2'
+}
+
+allprojects {
+    repositories {
+        //start here
+        configurations.all {
+            resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+                def requested = details.requested
+                if (requested.group == 'com.google.android.gms') {
+                    details.useVersion '12.0.1'
+                }
+                if (requested.group == 'com.google.firebase') {
+                    details.useVersion '12.0.1'
+                }
+            }
+        }
+        //end
+        jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
