Added firebase db integration, so a marker's details are save on the realtime db

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
     // Firebase AuthUI
     implementation 'com.firebaseui:firebase-ui-auth:3.2.2'
+    implementation 'com.google.firebase:firebase-core:16.0.3'
+    implementation 'com.google.firebase:firebase-database:16.0.2'
 
     // Locations
     implementation 'com.google.android.gms:play-services-places:15.0.1'
