Added ability to upload photos to the cloud

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 
     // Locations
     implementation 'com.google.android.gms:play-services-places:15.0.1'
+    implementation 'com.google.firebase:firebase-storage:16.0.2'
+    implementation 'com.google.firebase:firebase-auth:16.0.3'
 }
 
 allprojects {
